v0.1.0/_sources/apidocs/bibdeskparser/bibdeskparser.md.txt
# {py:mod}`bibdeskparser`

```{py:module} bibdeskparser
```

```{autodoc2-docstring} bibdeskparser
:parser: myst
:allowtitles:
```

## Package Contents

### Classes

````{list-table}
:class: autosummary longtable
:align: left

* - {py:obj}`Library <bibdeskparser.library.Library>`
  - ```{autodoc2-docstring} bibdeskparser.library.Library
    :parser: myst
    :summary:
    ```
* - {py:obj}`Entry <bibdeskparser.entry.Entry>`
  - ```{autodoc2-docstring} bibdeskparser.entry.Entry
    :parser: myst
    :summary:
    ```
* - {py:obj}`Value <bibdeskparser.entry.Value>`
  - ```{autodoc2-docstring} bibdeskparser.entry.Value
    :parser: myst
    :summary:
    ```
````

### API

`````{py:class} Library(path=None, creator=None)
:canonical: bibdeskparser.library.Library

Bases: {py:obj}`collections.abc.MutableMapping`

```{autodoc2-docstring} bibdeskparser.library.Library
:parser: myst
```

```{rubric} Initialization
```

```{autodoc2-docstring} bibdeskparser.library.Library.__init__
:parser: myst
```

````{py:method} __repr__()
:canonical: bibdeskparser.library.Library.__repr__

````

````{py:property} path
:canonical: bibdeskparser.library.Library.path

```{autodoc2-docstring} bibdeskparser.library.Library.path
:parser: myst
```

````

````{py:property} timestamp
:canonical: bibdeskparser.library.Library.timestamp

```{autodoc2-docstring} bibdeskparser.library.Library.timestamp
:parser: myst
```

````

````{py:property} strings
:canonical: bibdeskparser.library.Library.strings

```{autodoc2-docstring} bibdeskparser.library.Library.strings
:parser: myst
```

````

````{py:method} rename_string(old_name, new_name)
:canonical: bibdeskparser.library.Library.rename_string

```{autodoc2-docstring} bibdeskparser.library.Library.rename_string
:parser: myst
```

````

````{py:property} groups
:canonical: bibdeskparser.library.Library.groups

```{autodoc2-docstring} bibdeskparser.library.Library.groups
:parser: myst
```

````

````{py:method} add_to_group(name, *keys)
:canonical: bibdeskparser.library.Library.add_to_group

```{autodoc2-docstring} bibdeskparser.library.Library.add_to_group
:parser: myst
```

````

````{py:method} remove_from_group(name, *keys)
:canonical: bibdeskparser.library.Library.remove_from_group

```{autodoc2-docstring} bibdeskparser.library.Library.remove_from_group
:parser: myst
```

````

````{py:property} keywords
:canonical: bibdeskparser.library.Library.keywords

```{autodoc2-docstring} bibdeskparser.library.Library.keywords
:parser: myst
```

````

````{py:method} add_to_keyword(keyword, *keys)
:canonical: bibdeskparser.library.Library.add_to_keyword

```{autodoc2-docstring} bibdeskparser.library.Library.add_to_keyword
:parser: myst
```

````

````{py:method} remove_from_keyword(keyword, *keys)
:canonical: bibdeskparser.library.Library.remove_from_keyword

```{autodoc2-docstring} bibdeskparser.library.Library.remove_from_keyword
:parser: myst
```

````

````{py:property} duplicate_keys
:canonical: bibdeskparser.library.Library.duplicate_keys

```{autodoc2-docstring} bibdeskparser.library.Library.duplicate_keys
:parser: myst
```

````

````{py:property} entries
:canonical: bibdeskparser.library.Library.entries

```{autodoc2-docstring} bibdeskparser.library.Library.entries
:parser: myst
```

````

````{py:method} __getitem__(key)
:canonical: bibdeskparser.library.Library.__getitem__

```{autodoc2-docstring} bibdeskparser.library.Library.__getitem__
:parser: myst
```

````

````{py:method} __setitem__(key, entry)
:canonical: bibdeskparser.library.Library.__setitem__

```{autodoc2-docstring} bibdeskparser.library.Library.__setitem__
:parser: myst
```

````

````{py:method} __delitem__(key)
:canonical: bibdeskparser.library.Library.__delitem__

```{autodoc2-docstring} bibdeskparser.library.Library.__delitem__
:parser: myst
```

````

````{py:method} rekey(old_key, new_key)
:canonical: bibdeskparser.library.Library.rekey

```{autodoc2-docstring} bibdeskparser.library.Library.rekey
:parser: myst
```

````

````{py:method} __iter__()
:canonical: bibdeskparser.library.Library.__iter__

```{autodoc2-docstring} bibdeskparser.library.Library.__iter__
:parser: myst
```

````

````{py:method} __len__()
:canonical: bibdeskparser.library.Library.__len__

```{autodoc2-docstring} bibdeskparser.library.Library.__len__
:parser: myst
```

````

````{py:method} add_file(key, filename, *, check_that_file_exists=True)
:canonical: bibdeskparser.library.Library.add_file

```{autodoc2-docstring} bibdeskparser.library.Library.add_file
:parser: myst
```

````

````{py:method} replace_file(key, old_filename, new_filename, *, remove, check_that_file_exists=True)
:canonical: bibdeskparser.library.Library.replace_file

```{autodoc2-docstring} bibdeskparser.library.Library.replace_file
:parser: myst
```

````

````{py:method} unlink_file(key, filename, *, remove)
:canonical: bibdeskparser.library.Library.unlink_file

```{autodoc2-docstring} bibdeskparser.library.Library.unlink_file
:parser: myst
```

````

````{py:method} rename_file(key, old_filename, new_filename)
:canonical: bibdeskparser.library.Library.rename_file

```{autodoc2-docstring} bibdeskparser.library.Library.rename_file
:parser: myst
```

````

````{py:method} save(path=None, force=False)
:canonical: bibdeskparser.library.Library.save

```{autodoc2-docstring} bibdeskparser.library.Library.save
:parser: myst
```

````

````{py:method} render(*keys, format='markdown', style='default')
:canonical: bibdeskparser.library.Library.render

```{autodoc2-docstring} bibdeskparser.library.Library.render
:parser: myst
```

````

````{py:method} export(*keys, format='default', outfile=None)
:canonical: bibdeskparser.library.Library.export

```{autodoc2-docstring} bibdeskparser.library.Library.export
:parser: myst
```

````

````{py:method} edit(*keys, format='default', editor=None)
:canonical: bibdeskparser.library.Library.edit

```{autodoc2-docstring} bibdeskparser.library.Library.edit
:parser: myst
```

````

````{py:method} edit_strings(editor=None)
:canonical: bibdeskparser.library.Library.edit_strings

```{autodoc2-docstring} bibdeskparser.library.Library.edit_strings
:parser: myst
```

````

`````

`````{py:class} Entry(entry_type, key, fields=None)
:canonical: bibdeskparser.entry.Entry

Bases: {py:obj}`collections.abc.MutableMapping`

```{autodoc2-docstring} bibdeskparser.entry.Entry
:parser: myst
```

```{rubric} Initialization
```

```{autodoc2-docstring} bibdeskparser.entry.Entry.__init__
:parser: myst
```

````{py:method} __getitem__(key)
:canonical: bibdeskparser.entry.Entry.__getitem__

```{autodoc2-docstring} bibdeskparser.entry.Entry.__getitem__
:parser: myst
```

````

````{py:method} __setitem__(key, value)
:canonical: bibdeskparser.entry.Entry.__setitem__

```{autodoc2-docstring} bibdeskparser.entry.Entry.__setitem__
:parser: myst
```

````

````{py:method} __delitem__(key)
:canonical: bibdeskparser.entry.Entry.__delitem__

```{autodoc2-docstring} bibdeskparser.entry.Entry.__delitem__
:parser: myst
```

````

````{py:method} __iter__()
:canonical: bibdeskparser.entry.Entry.__iter__

```{autodoc2-docstring} bibdeskparser.entry.Entry.__iter__
:parser: myst
```

````

````{py:method} __len__()
:canonical: bibdeskparser.entry.Entry.__len__

```{autodoc2-docstring} bibdeskparser.entry.Entry.__len__
:parser: myst
```

````

````{py:property} date_added
:canonical: bibdeskparser.entry.Entry.date_added

```{autodoc2-docstring} bibdeskparser.entry.Entry.date_added
:parser: myst
```

````

````{py:property} date_modified
:canonical: bibdeskparser.entry.Entry.date_modified

```{autodoc2-docstring} bibdeskparser.entry.Entry.date_modified
:parser: myst
```

````

````{py:property} dirty
:canonical: bibdeskparser.entry.Entry.dirty

```{autodoc2-docstring} bibdeskparser.entry.Entry.dirty
:parser: myst
```

````

````{py:property} key
:canonical: bibdeskparser.entry.Entry.key

```{autodoc2-docstring} bibdeskparser.entry.Entry.key
:parser: myst
```

````

````{py:property} entry_type
:canonical: bibdeskparser.entry.Entry.entry_type

```{autodoc2-docstring} bibdeskparser.entry.Entry.entry_type
:parser: myst
```

````

````{py:property} groups
:canonical: bibdeskparser.entry.Entry.groups

```{autodoc2-docstring} bibdeskparser.entry.Entry.groups
:parser: myst
```

````

````{py:property} keywords
:canonical: bibdeskparser.entry.Entry.keywords

```{autodoc2-docstring} bibdeskparser.entry.Entry.keywords
:parser: myst
```

````

````{py:property} files
:canonical: bibdeskparser.entry.Entry.files

```{autodoc2-docstring} bibdeskparser.entry.Entry.files
:parser: myst
```

````

````{py:property} urls
:canonical: bibdeskparser.entry.Entry.urls

```{autodoc2-docstring} bibdeskparser.entry.Entry.urls
:parser: myst
```

````

````{py:property} author
:canonical: bibdeskparser.entry.Entry.author

```{autodoc2-docstring} bibdeskparser.entry.Entry.author
:parser: myst
```

````

````{py:property} editor
:canonical: bibdeskparser.entry.Entry.editor

```{autodoc2-docstring} bibdeskparser.entry.Entry.editor
:parser: myst
```

````

````{py:method} __repr__()
:canonical: bibdeskparser.entry.Entry.__repr__

````

````{py:method} copy()
:canonical: bibdeskparser.entry.Entry.copy

```{autodoc2-docstring} bibdeskparser.entry.Entry.copy
:parser: myst
```

````

`````

`````{py:class} Value()
:canonical: bibdeskparser.entry.Value

Bases: {py:obj}`str`

```{autodoc2-docstring} bibdeskparser.entry.Value
:parser: myst
```

```{rubric} Initialization
```

```{autodoc2-docstring} bibdeskparser.entry.Value.__init__
:parser: myst
```

````{py:attribute} __slots__
:canonical: bibdeskparser.entry.Value.__slots__
:value: >
   ()

```{autodoc2-docstring} bibdeskparser.entry.Value.__slots__
:parser: myst
```

````

`````

````{py:exception} StaleFileError()
:canonical: bibdeskparser.library.StaleFileError

Bases: {py:obj}`RuntimeError`

```{autodoc2-docstring} bibdeskparser.library.StaleFileError
:parser: myst
```

```{rubric} Initialization
```

```{autodoc2-docstring} bibdeskparser.library.StaleFileError.__init__
:parser: myst
```

````
